--- a/app/src/main/res/layout/item_oder_history.xml
+++ b/app/src/main/res/layout/item_oder_history.xml
@@ -17,6 +17,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Tổng tiền: 0 VNĐ"
+        android:textColor="#FF0000"
         android:textSize="14sp" />
 
 </LinearLayout>
